--- a/.editorconfig
+++ b/.editorconfig
@@ -9,9 +9,11 @@ insert_final_newline = true
 trim_trailing_whitespace = true
 
 [*.md]
+indent-size = 4
 max_line_length = off
 trim_trailing_whitespace = false
 
 [*.go]
 indent_size = 4
+indent_style = tab
 trim_trailing_whitespace = true
